<resources>
    <string name="app_name" translatable="false">specter</string>
    <string name="symbol_at" translatable="false">\@</string>
    <string name="symbol_dot" translatable="false">·</string>
    <string name="channels_menu_attribute_channel_created">Channel created</string>
    <string name="channels_menu_attribute_not_posts">No posts</string>
    <string name="number_channels_nominative_case">channel</string>
    <string name="number_channels_genitive_case">channels</string>
    <string name="number_channels_plural_genitive_case">channels</string>
    <string name="number_subscribers_nominative_case">subscriber</string>
    <string name="number_subscribers_genitive_case">subscribers</string>
    <string name="number_subscribers_plural_genitive_case">subscribers</string>
    <string name="hard_update_header">Your version is outdated!</string>
    <string name="sign_in_header">Log in with <font color="#D75026">eco</font>st</string>
    <string name="sign_up_header">Sign up to <font color="#D75026">eco</font>st</string>
    <string name="specter_start_header">Let\'s start</string>
    <string name="channels_menu_header">Channels</string>
    <string name="create_channel_menu_header">Create a channel</string>
    <string name="settings_menu_header">Settings</string>
    <string name="support_header">Support</string>
    <string name="faq_support_header">FAQ</string>
    <string name="form_appeal_support_header">Форма обращения</string>
    <string name="appeals_support_header">Обращения</string>
    <string name="comments_header">Comments</string>
    <string name="channel_settings_header">Channel settings</string>
    <string name="phone_number_sign_up_header_description">Enter your phone number.</string>
    <string name="password_sign_up_header_description">Come up with a password that will be used to log in to your account.</string>
    <string name="sign_in_error_not_phone_number">Oops… You need to enter your phone number to log in</string>
    <string name="sign_in_error_not_password">Oops… You need to enter your password to log in</string>
    <string name="sign_in_error_not_account">We\'ve been searching for a while but we couldn\'t find an account linked to this phone number</string>
    <string name="sign_in_error_wrong_password">You have entered the wrong password =( </string>
    <string name="phone_number_sign_up_error_not_username">Oops… You need to enter your phone number to sign up</string>
    <string name="phone_number_sign_up_error_already_phone_number">There\'s already an account linked to this phone number</string>
    <string name="password_sign_up_error_not_password">Oops… You need to come up with your password to register</string>
    <string name="password_sign_up_error_not_confirm_password">Oops… You need to confirm with your password to register</string>
    <string name="password_sign_up_error_short_password">The password is too weak… Try more than 7 characters and we\'re good</string>
    <string name="password_sign_up_error_wrong_confirm_password">Something\'s wrong! These passwords don\'t look alike</string>
    <string name="create_channel_menu_error_not_title">You need to come up with a name for your channel</string>
    <string name="create_channel_menu_error_not_short_channel_link">You need to enter a short link</string>
    <string name="create_channel_menu_error_small_short_channel_link">The short link must contain more than 3 characters</string>
    <string name="create_channel_menu_error_busy_short_channel_link">The link is already taken =(</string>
    <string name="account_settings_error_not_name">You can\'t be unnamed in our area</string>
    <string name="account_settings_error_not_short_user_link">The short link must contain more than 3 characters</string>
    <string name="account_settings_error_small_short_user_link">Come up with a short link containing more than 3 characters</string>
    <string name="account_settings_error_busy_short_user_link">It looks like this short link is already taken =(</string>
    <string name="channel_settings_error_not_channel_title">Channel name must contain at least 1 character</string>
    <string name="channel_settings_error_not_short_channel_title">The short link must contain more than 3 characters</string>
    <string name="channel_settings_error_small_short_channel_link">Come up with a short link containing more than 3 characters</string>
    <string name="channel_settings_error_busy_short_channel_link">It looks like this short link is already taken =(</string>
    <string name="hard_update_description">Unfortunately, we stopped supporting this version because a critical error was found, or this version does not support the new service system.\n\nClick on the \«Update\» button and download the latest version of the application. If you are sure that you have the latest version of the app, then it\'s worth waiting. We are already actively working on a new release.</string>
    <string name="hard_update_button_update">Update</string>
    <string name="sign_in_input_hint_phone_number">Phone number</string>
    <string name="sign_in_input_hint_password">Password</string>
    <string name="sign_in_button_sign_in">Log in</string>
    <string name="sign_in_button_sign_up">Sign up</string>
    <string name="phone_number_sign_up_input_hint_phone_number">Phone number</string>
    <string name="phone_number_sign_up_button_continue">Continue</string>
    <string name="password_sign_up_input_hint_password">Password</string>
    <string name="password_sign_up_input_hint_confirm_password">Confirm password</string>
    <string name="password_sign_up_button_sign_up">Sign up</string>
    <string name="specter_start_parameter_header_name">Name</string>
    <string name="specter_start_parameter_header_short_user_link">Short link</string>
    <string name="specter_start_button_start">Start</string>
    <string name="toolbar_item_search">Search channels</string>
    <string name="drawer_item_create_channel">Create a channel</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_support">Support</string>
    <string name="channels_search_input_channel_title_hint">Channel name</string>
    <string name="create_channel_menu_parameter_header_title">Channel name</string>
    <string name="create_channel_menu_parameter_header_short_channel_link">Short link</string>
    <string name="create_channel_menu_parameter_header_channel_category">Category</string>
    <string name="create_channel_menu_parameter_header_channel_description">Description</string>
    <string name="create_channel_menu_button_create_channel">Create</string>
    <string name="settings_menu_section_account">Account</string>
    <string name="settings_menu_section_app">App</string>
    <string name="settings_menu_parameter_header_name">Name</string>
    <string name="settings_menu_parameter_header_short_user_link">Short link</string>
    <string name="settings_menu_parameter_header_theme">Theme</string>
    <string-array name="setting_array_theme">
        <item>System</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="settings_menu_parameter_header_language">Language</string>
    <string-array name="setting_array_language" translatable="false">
        <item>Русский</item>
        <item>English</item>
    </string-array>
    <string name="settings_menu_button_sign_out">Log out</string>
    <string name="channel_button_subscribe">Subscribe</string>
    <string name="channel_text_edit_post">Edit post</string>
    <string name="channel_input_hint_post">Broadcast</string>
    <string name="channel_alert_dialog_item_comments">Comments</string>
    <string name="channel_alert_dialog_item_edit">Edit</string>
    <string name="channel_alert_dialog_item_copy">Copy</string>
    <string name="channel_alert_dialog_item_delete">Delete</string>
    <string name="channel_context_menu_item_send_without_name">Send anonymously</string>
    <string name="channel_text_edit_comment">Edit comment</string>
    <string name="comments_input_hint_comment">Write a comment</string>
    <string name="comments_alert_dialog_item_edit">Edit</string>
    <string name="comments_alert_dialog_item_copy">Copy</string>
    <string name="comments_alert_dialog_item_delete">Delete</string>
    <string name="channel_page_button_unsubscribe">Unsubscribe</string>
    <string name="channel_page_button_subscribe">Subscribe</string>
    <string name="channel_page_description_header">Description</string>
    <string name="channel_settings_parameter_header_title">Channel name</string>
    <string name="channel_settings_parameter_header_short_channel_link">Short link</string>
    <string name="channel_settings_parameter_header_category">Category</string>
    <string-array name="channel_settings_array_category">
        <item>Not selected</item>
        <item>Blog</item>
        <item>News</item>
    </string-array>
    <string name="channel_settings_parameter_header_description">Description</string>
    <string name="channel_settings_button_delete_channel">Delete channel</string>
    <string name="faq_answer_item_author">Support</string>
    <string name="faq_support_button_contact_support">Обратиться в поддержку</string>
    <string name="faq_support_post_copy">The text has been copied</string>
    <string name="faq_support_input_hint_faq_post">Write the text</string>
    <string name="faq_support_context_menu_item_send_question">Send a question</string>
    <string name="form_appeal_support_parameter_header_topic">Тема</string>
    <string name="form_appeal_support_parameter_header_text">Текст обращения</string>
    <string name="form_appeal_support_button_create_appeal">Создать обращение</string>
    <string name="main_menu_button_content_description_close">Close</string>
    <string name="settings_menu_content_description_save_user_name">Save name</string>
    <string name="settings_menu_button_content_description_save_short_user_link">Save short link</string>
    <string name="channel_item_content_description_channel_photo">Channel photo</string>
    <string name="channel_settings_button_content_description_save_channel_title">Save channel name</string>
    <string name="channel_settings_button_content_description_save_short_channel_link">Save short link</string>
    <string name="settings_menu_section_ecost_account">ecost</string>
    <string name="settings_menu_parameter_header_phone_number">Номер телефона</string>
    <string name="settings_menu_parameter_header_password">Пароль</string>
    <string name="password_hide">•••••••••••</string>
    <string name="ecost_settings_menu_button_change">Сменить</string>
    <string name="ecost_settings_menu_error_wrong_password">Неверный пароль</string>
    <string name="ecost_settings_menu_error_not_password">Стоит ввести новый пароль</string>
    <string name="ecost_settings_menu_error_small_password">Пароль должен содержать не менее 8 символов</string>
    <string name="edit_number_phone_alert_dialog_header">Сменить номер</string>
    <string name="edit_number_phone_alert_dialog_hint_number_phone">Номер телефона</string>
    <string name="edit_number_phone_alert_dialog_hint_password">Введите пароль</string>
    <string name="edit_password_alert_dialog_header">Сменить пароль</string>
    <string name="edit_password_alert_dialog_hint_new_password">Введите новый пароль</string>
    <string name="edit_password_alert_dialog_hint_old_password">Введите старый пароль</string>
    <string name="alert_dialog_okey">окей</string>
    <string name="alert_dialog_cance">отмена</string>
    <string name="alert_dialog_yes">да</string>
    <string name="channel_settings_delete_channel_alert_dialog_text_header">Удаление канала</string>
    <string name="channel_settings_delete_channel_alert_dialog_text_description">Вы уверены что хотите удалить канал?\nВсе его данные будут уничтожены.</string>
</resources>