<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background"
    tools:context=".auth.PhoneNumberSignUpFragment">

    <TextView
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_extra_bold"
        android:textSize="24sp"
        android:text="@string/sign_up_header" />

    <TextView
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:textColor="@color/auth_description_text"
        android:fontFamily="@font/manrope_regular"
        android:textSize="14sp"
        android:text="@string/phone_number_sign_up_header_description" />

    <EditText
        android:id="@+id/input_number_phone"
        android:layout_width="326dp"
        android:layout_height="55dp"
        android:inputType="phone"
        android:autofillHints="phone"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_auth"
        android:paddingHorizontal="17dp"
        android:textColorHint="@color/auth_color_hint"
        android:fontFamily="@font/manrope_semi_bold"
        android:textSize="16sp"
        android:hint="@string/phone_number_sign_up_input_hint_phone_number" />

    <Button
        android:id="@+id/button_continue"
        android:layout_width="326dp"
        android:layout_height="55dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/button_auth"
        android:textColor="@color/auth_button_color_text"
        android:fontFamily="@font/manrope_bold"
        android:textSize="16sp"
        android:text="@string/phone_number_sign_up_button_continue" />
</LinearLayout>