<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/background"
    tools:context=".menu.SettingsMenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/button_close"
            android:layout_width="29dp"
            android:layout_height="29dp"
            android:layout_marginStart="26dp"
            android:elevation="6dp"
            app:cardCornerRadius="14.5dp">

            <View
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_gravity="center"
                android:background="@drawable/icon_cross"
                android:contentDescription="@string/main_menu_button_content_description_close" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:fontFamily="@font/inter_semi_bold"
            android:textSize="22sp"
            android:text="@string/settings_menu_header" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_sections_list"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="25dp"
        android:overScrollMode="never" />

    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="13dp"
        android:textColor="@color/parameters_header"
        android:fontFamily="@font/inter_semi_bold"
        android:textSize="12sp"
        android:text="@string/settings_menu_parameter_header_name" />

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_user_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:imeOptions="actionGo"
            android:inputType="text"
            android:autofillHints="title"
            android:layout_weight="1"
            android:background="@drawable/input"
            android:paddingHorizontal="13dp"
            android:fontFamily="@font/inter_semi_bold"
            android:textSize="12sp"
            tools:ignore="LabelFor" />

        <ImageButton
            android:id="@+id/button_save_user_name"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/button_permissive"
            android:src="@drawable/icon_save"
            android:visibility="gone"
            android:contentDescription="@string/settings_menu_content_description_save_user_name" />
    </LinearLayout>

    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="13dp"
        android:textColor="@color/parameters_header"
        android:fontFamily="@font/inter_semi_bold"
        android:textSize="12sp"
        android:text="@string/settings_menu_parameter_header_short_user_link" />

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/input_short_user_link"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionGo"
                android:inputType="text"
                android:autofillHints="short_user_link"
                android:background="@drawable/input"
                android:paddingHorizontal="25dp"
                android:textColor="@color/main_color"
                android:fontFamily="@font/inter_semi_bold"
                android:textSize="12sp"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/inter_semi_bold"
                android:gravity="center_vertical|end"
                android:text="@string/symbol_at"
                android:textColor="@color/main_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/button_save_short_user_link"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/button_permissive"
            android:src="@drawable/icon_save"
            android:visibility="gone"
            android:contentDescription="@string/settings_menu_button_content_description_save_short_user_link" />
    </LinearLayout>

    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="13dp"
        android:textColor="@color/parameters_header"
        android:fontFamily="@font/inter_semi_bold"
        android:textSize="12sp"
        android:text="@string/settings_menu_parameter_header_theme" />

    <FrameLayout
        android:layout_width="340dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp">

        <Spinner
            android:id="@+id/spinner_theme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/input"
            android:paddingHorizontal="13dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/icon_arrow_down"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="13dp"
        android:textColor="@color/parameters_header"
        android:fontFamily="@font/inter_semi_bold"
        android:textSize="12sp"
        android:text="@string/settings_menu_parameter_header_language" />

    <FrameLayout
        android:layout_width="340dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp">

        <Spinner
            android:id="@+id/spinner_language"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/input"
            android:paddingHorizontal="13dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/icon_arrow_down"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <Button
        android:id="@+id/button_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginTop="22dp"
        android:paddingHorizontal="19dp"
        android:background="@drawable/button_negative"
        android:textColor="@color/button_negative_text_color"
        android:fontFamily="@font/inter_bold"
        android:textSize="12sp"
        android:text="@string/settings_menu_button_sign_out" />
</LinearLayout>