<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="337dp"
        android:layout_height="242dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/post_background"
        android:elevation="18dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginStart="14dp"
            android:fontFamily="@font/inter_bold"
            android:textSize="16sp"
            android:text="@string/hard_update_header" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="13dp"
            android:fontFamily="@font/inter_regular"
            android:textSize="12sp"
            android:text="@string/hard_update_description" />

        <FrameLayout
            android:id="@+id/button_update"
            android:layout_width="337dp"
            android:layout_height="37dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/button_neutral">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/main_color"
                android:textSize="12sp"
                android:text="@string/hard_update_button_update" />
        </FrameLayout>
    </LinearLayout>
</FrameLayout>