<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:gravity="center_horizontal"
    tools:context=".channel.ChannelSettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/button_close"
            android:layout_width="29dp"
            android:layout_height="29dp"
            android:layout_marginStart="26dp"
            android:elevation="6dp"
            app:cardCornerRadius="14.5dp">

            <View
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_gravity="center"
                android:background="@drawable/icon_cross"
                android:contentDescription="@string/main_menu_button_content_description_close" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:fontFamily="@font/inter_semi_bold"
            android:textSize="22sp"
            android:text="@string/channel_settings_header" />
    </LinearLayout>

    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:paddingHorizontal="13dp"
        android:textColor="@color/parameters_header"
        android:fontFamily="@font/inter_semi_bold"
        android:textSize="12sp"
        android:text="@string/channel_settings_parameter_header_title" />

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_channel_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:imeOptions="actionGo"
            android:inputType="text"
            android:autofillHints="title"
            android:layout_weight="1"
            android:background="@drawable/input"
            android:paddingHorizontal="13dp"
            android:fontFamily="@font/inter_semi_bold"
            android:textSize="12sp"
            tools:ignore="LabelFor" />

        <ImageButton
            android:id="@+id/button_save_channel_title"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/button_permissive"
            android:src="@drawable/icon_save"
            android:visibility="gone"
            android:contentDescription="@string/channel_settings_button_content_description_save_channel_title" />
    </LinearLayout>

    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="13dp"
        android:textColor="@color/parameters_header"
        android:fontFamily="@font/inter_semi_bold"
        android:textSize="12sp"
        android:text="@string/channel_settings_parameter_header_short_channel_link" />

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/input_short_channel_link"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionGo"
                android:inputType="text"
                android:autofillHints="short_channel_link"
                android:background="@drawable/input"
                android:paddingHorizontal="25dp"
                android:textColor="@color/main_color"
                android:fontFamily="@font/inter_semi_bold"
                android:textSize="12sp"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:textColor="@color/main_color"
                android:fontFamily="@font/inter_semi_bold"
                android:textSize="12sp"
                android:text="@string/symbol_at" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/button_save_short_channel_link"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/button_permissive"
            android:src="@drawable/icon_save"
            android:visibility="gone"
            android:contentDescription="@string/channel_settings_button_content_description_save_short_channel_link" />
    </LinearLayout>

    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:paddingHorizontal="13dp"
        android:textColor="@color/parameters_header"
        android:fontFamily="@font/inter_semi_bold"
        android:textSize="12sp"
        android:text="@string/channel_settings_parameter_header_category" />

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_weight="1">

            <Spinner
                android:id="@+id/spinner_chanel_сategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input"
                android:paddingHorizontal="13dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/icon_arrow_down"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <ImageButton
            android:id="@+id/button_save_channel_сategory"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/button_permissive"
            android:src="@drawable/icon_save"
            android:visibility="gone"
            android:contentDescription="@string/channel_settings_button_content_description_save_channel_title" />
    </LinearLayout>

    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:paddingHorizontal="13dp"
        android:textColor="@color/parameters_header"
        android:fontFamily="@font/inter_semi_bold"
        android:textSize="12sp"
        android:text="@string/channel_settings_parameter_header_description" />

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_channel_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="9.5dp"
            android:paddingTop="9.5dp"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="256"
            android:maxLines="8"
            android:autofillHints="title"
            android:background="@drawable/input"
            android:paddingHorizontal="13dp"
            android:fontFamily="@font/inter_semi_bold"
            android:textSize="12sp"
            tools:ignore="LabelFor" />

        <ImageButton
            android:id="@+id/button_save_channel_description"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="12dp"
            android:layout_gravity="bottom"
            android:background="@drawable/button_permissive"
            android:src="@drawable/icon_save"
            android:visibility="gone"
            android:contentDescription="@string/channel_settings_button_content_description_save_channel_title" />
    </LinearLayout>

    <Button
        android:id="@+id/button_delete_channel"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginTop="22dp"
        android:paddingHorizontal="19dp"
        android:background="@drawable/button_negative"
        android:textColor="@color/button_negative_text_color"
        android:fontFamily="@font/inter_bold"
        android:textSize="12sp"
        android:text="@string/channel_settings_button_delete_channel" />
</LinearLayout>